[gd_scene load_steps=33 format=2]

[ext_resource path="res://4 Enemy/PNG/walk-4.png" type="Texture" id=1]
[ext_resource path="res://4 Enemy/PNG/walk-1.png" type="Texture" id=2]
[ext_resource path="res://4 Enemy/PNG/walk-5.png" type="Texture" id=3]
[ext_resource path="res://4 Enemy/PNG/dead-4.png" type="Texture" id=4]
[ext_resource path="res://4 Enemy/PNG/walk-3.png" type="Texture" id=5]
[ext_resource path="res://4 Enemy/PNG/walk-2.png" type="Texture" id=6]
[ext_resource path="res://4 Enemy/PNG/attack-B3.png" type="Texture" id=7]
[ext_resource path="res://4 Enemy/PNG/attack-B4.png" type="Texture" id=8]
[ext_resource path="res://4 Enemy/PNG/attack-B5.png" type="Texture" id=9]
[ext_resource path="res://4 Enemy/PNG/walk-6.png" type="Texture" id=10]
[ext_resource path="res://4 Enemy/PNG/attack-B6.png" type="Texture" id=11]
[ext_resource path="res://4 Enemy/PNG/attack-B7.png" type="Texture" id=12]
[ext_resource path="res://4 Enemy/PNG/attack-A1.png" type="Texture" id=13]
[ext_resource path="res://4 Enemy/PNG/attack-A2.png" type="Texture" id=14]
[ext_resource path="res://4 Enemy/PNG/attack-A5.png" type="Texture" id=15]
[ext_resource path="res://4 Enemy/PNG/attack-A3.png" type="Texture" id=16]
[ext_resource path="res://4 Enemy/PNG/attack-A6.png" type="Texture" id=17]
[ext_resource path="res://4 Enemy/PNG/attack-B1.png" type="Texture" id=18]
[ext_resource path="res://4 Enemy/PNG/attack-A4.png" type="Texture" id=19]
[ext_resource path="res://4 Enemy/PNG/attack-B2.png" type="Texture" id=20]
[ext_resource path="res://4 Enemy/PNG/attack-B10.png" type="Texture" id=21]
[ext_resource path="res://4 Enemy/PNG/dead-1.png" type="Texture" id=22]
[ext_resource path="res://4 Enemy/PNG/dead-2.png" type="Texture" id=23]
[ext_resource path="res://4 Enemy/PNG/attack-B8.png" type="Texture" id=24]
[ext_resource path="res://4 Enemy/PNG/dead-3.png" type="Texture" id=25]
[ext_resource path="res://4 Enemy/PNG/attack-B9.png" type="Texture" id=26]
[ext_resource path="res://enemy.gd" type="Script" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 20 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": true,
"name": "attack 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 8 )

[node name="enemy1" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 27 )

[node name="skel1" type="AnimatedSprite" parent="."]
position = Vector2( 56, -24 )
scale = Vector2( 0.5625, 0.583333 )
frames = SubResource( 1 )
animation = "attack 1"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, -16 )
shape = SubResource( 2 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 48, -16 )
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 8

[node name="left" type="RayCast2D" parent="."]
position = Vector2( 48, -16 )
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 8

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="hitbox_right" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 40, -16 )
shape = SubResource( 6 )

[node name="hitbox_left" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 40, -16 )
shape = SubResource( 6 )

[node name="area_final" type="Area2D" parent="." groups=[
"lanza",
]]
collision_layer = 2

[node name="are_final_right" type="CollisionShape2D" parent="area_final"]
position = Vector2( 72, -16 )
shape = SubResource( 4 )

[node name="are_final_left" type="CollisionShape2D" parent="area_final"]
position = Vector2( 72, -16 )
shape = SubResource( 4 )

[node name="attack" type="Area2D" parent="."]
collision_layer = 2

[node name="are_attack_right" type="CollisionShape2D" parent="attack"]
position = Vector2( 72, -16 )
shape = SubResource( 5 )

[node name="are_attack_left" type="CollisionShape2D" parent="attack"]
position = Vector2( 72, -16 )
shape = SubResource( 5 )
[connection signal="animation_finished" from="skel1" to="." method="_on_skel1_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="attack" to="." method="_on_attack_area_area_entered"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_area_body_entered"]
